--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -19,7 +19,9 @@
     "cancel": "Cancel",
     "continue": "Continue",
     "complete": "Complete",
-    "edit": "Edit"
+    "add": "Add",
+    "edit": "Edit",
+    "delete": "Delete"
   },
   "validation": {
     "requiredField": "This field is required.",
@@ -153,28 +155,38 @@
     "delivered": "Delivered",
     "cancelled": "Canceled"
   },
-  "shippingServicesSettings": {
-    "filterServices": "Filter services",
+  "shippingServices": {
+    "pickShippingService": "Add delivery services",
+    "filterModalTitle": "Filters",
+    "applyFilters": "Apply filters",
     "type": "Type",
-    "national": "National",
+    "national": "Domestic",
     "international": "International",
-    "deliveryType": "Delivery type",
-    "economic": "Economic",
+    "deliveryType": "Type of shipment",
+    "economic": "Budget",
     "express": "Express",
     "parcelOrigin": "Parcel origin",
     "collection": "Collection",
-    "dropOff": "Drop off",
+    "dropoff": "Drop off",
     "parcelDestination": "Parcel destination",
-    "pickUp": "Pick up",
+    "pickup": "Pick up",
     "delivery": "Delivery",
+    "carrierLogo": "Carrier logo",
+    "carrier": "Carrier",
+    "serviceTitle": "Service title",
+    "transitTime": "Transit Time",
+    "origin": "Origin",
+    "destination": "Destination",
+    "myPrices": "My prices",
+    "packlinkPrices": "Packlink prices"
+  },
+  "shippingServicesSettings": {
+    "filterServices": "Filter services",
     "addServiceTitle": "Add service title",
     "titleWillBeVisible": "This title will be visible to your customers",
-    "serviceTitle": "Service title",
-    "carrierLogo": "Carrier logo",
     "showCarrierLogo": "Show carrier logo to my customers",
     "selectPricingPolicy": "Select pricing policy",
     "choosePricingPolicy": "Choose the pricing policy to show your customers",
-    "packlinkPrices": "Packlink prices",
     "percentagePacklinkPrices": "% of Packlink prices",
     "fixedPrices": "Fixed prices",
     "packlinkPercent": "Packlink percent",
@@ -184,9 +196,6 @@
     "select": "Select",
     "shippingServices": "Shipping Services",
     "carrier": "Carrier",
-    "transitTime": "Transit Time",
-    "origin": "Origin",
-    "destination": "Destination",
     "showingPercentsResults": "Showing %s results",
     "setPricingRule": "Please set pricing rule",
     "increase": "Increase",
