Add base page for editing a shipping service
Issue: PLCR1802-50

--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -178,7 +178,8 @@
     "origin": "Origin",
     "destination": "Destination",
     "myPrices": "My prices",
-    "packlinkPrices": "Packlink prices"
+    "packlinkPrices": "Packlink prices",
+    "configureService": "Set up service"
   },
   "shippingServicesSettings": {
     "filterServices": "Filter services",
