Add page for editing a shipping service
Issue: PLCR1802-50

--- a/src/BusinessLogic/Resources/lang/de.json
+++ b/src/BusinessLogic/Resources/lang/de.json
@@ -166,15 +166,20 @@
     "parcelDestination": "Zielort des Pakets",
     "pickup": "Abholung im Paketshop",
     "delivery": "Zustellung an Adresse",
-    "packlinkPrices": "Packlink-Preise"
+    "carrier": "Versandpartner",
+    "carrierLogo": "Logo des Versandunternehmens",
+    "transitTime": "Versandlaufzeit",
+    "origin": "Absender",
+    "destination": "Empfänger",
+    "packlinkPrices": "Packlink-Preise",
+    "showCarrierLogo": "Meinen Kunden das Logo anzeigen",
+    "tax": "Steuer"
   },
   "shippingServicesSettings": {
     "filterServices": "Versanddienste filtern",
     "addServiceTitle": "Name des Versanddienstes festlegen",
     "titleWillBeVisible": "Dieser Name wird Ihren Kunden angezeigt",
     "serviceTitle": "Name des Versanddienstes",
-    "carrierLogo": "Logo des Versandunternehmens",
-    "showCarrierLogo": "Meinen Kunden das Logo anzeigen",
     "selectPricingPolicy": "Preispolitik wählen",
     "choosePricingPolicy": "Wählen Sie die Preispolitik, die Sie Ihren Kunden anzeigen möchten",
     "percentagePacklinkPrices": "%-Satz der Packlink-Preise",
@@ -187,10 +192,6 @@
     "selectedShippingServices": "Ausgewählte Versanddienste",
     "select": "Auswählen",
     "shippingServices": "Versanddienste",
-    "carrier": "Versandpartner",
-    "transitTime": "Versandlaufzeit",
-    "origin": "Absender",
-    "destination": "Empfänger",
     "showingPercentsResults": "Es werden %s Ergebnisse angezeigt",
     "setPricingRule": "Bitte legen Sie eine Preisregel fest",
     "increase": "Erhöhen",
@@ -204,7 +205,6 @@
     "to": "Bis",
     "price": "Preis",
     "addPrice": "Preis hinzufügen",
-    "tax": "Steuer",
     "gettingAvailableShippingService": "Wir suchen verfügbare Versanddienste von Packlink PRO, bitte haben Sie einen Moment Geduld.",
     "shippingServiceSuccessfullySaved": "Versanddienst erfolgreich gespeichert.",
     "congrats": "Glückwunsch! Ihr erster Versanddienst wurde erfolgreich erstellt.",
