--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -174,18 +174,33 @@
     "carrierLogo": "Carrier logo",
     "carrier": "Carrier",
     "serviceTitle": "Service title",
+    "serviceTitleDescription": "Customise your shipment by editing it. Your customers will be able to see it.",
     "transitTime": "Transit Time",
     "origin": "Origin",
     "destination": "Destination",
     "myPrices": "My prices",
     "packlinkPrices": "Packlink prices",
-    "configureService": "Set up service"
+    "configureService": "Set up service",
+    "showCarrierLogo": "Show carrier logo to my customers",
+    "pricePolicy": "Price policy",
+    "pricePolicyDescription": "The default <strong>will be Packlink's basic prices.</strong> But you can configure these in a more precise way below.",
+    "configurePricePolicy": "Set up my shipment prices",
+    "taxClassTitle": "Choose your saved tax class",
+    "tax": "Tax",
+    "serviceCountriesTitle": "Availability by destination country",
+    "serviceCountriesDescription": "Select the availability for the countries that are supported for your shipping service.",
+    "openCountries": "See countries",
+    "allCountriesSelected": "All countries selected",
+    "oneCountrySelected": "One country selected",
+    "selectedCountries": "%s countries selected.",
+    "firstPricePolicyDescription": "Perfect, just a couple of steps:<br><br>1. Choose whether you want to set them by weight and/or purchase price.<br><br>2. Choose a price policy and set it up.",
+    "addFirstPolicy": "Add price rule",
+    "addAnotherPolicy": "Add another rule"
   },
   "shippingServicesSettings": {
     "filterServices": "Filter services",
     "addServiceTitle": "Add service title",
     "titleWillBeVisible": "This title will be visible to your customers",
-    "showCarrierLogo": "Show carrier logo to my customers",
     "selectPricingPolicy": "Select pricing policy",
     "choosePricingPolicy": "Choose the pricing policy to show your customers",
     "percentagePacklinkPrices": "% of Packlink prices",
@@ -196,7 +211,6 @@
     "selectedShippingServices": "Selected shipping services",
     "select": "Select",
     "shippingServices": "Shipping Services",
-    "carrier": "Carrier",
     "showingPercentsResults": "Showing %s results",
     "setPricingRule": "Please set pricing rule",
     "increase": "Increase",
@@ -210,7 +224,6 @@
     "to": "To",
     "price": "Price",
     "addPrice": "Add price",
-    "tax": "Tax",
     "gettingAvailableShippingService": "Getting available shipping services from Packlink PRO. Please wait a moment.",
     "shippingServiceSuccessfullySaved": "Shipping service successfully saved.",
     "congrats": "Congrats! Your first Shipping Method has been successfully created.",
