--- a/src/BusinessLogic/Resources/lang/es.json
+++ b/src/BusinessLogic/Resources/lang/es.json
@@ -172,6 +172,7 @@
     "pickup": "Pick up",
     "delivery": "Entrega",
     "serviceTitle": "Nombre del servicio",
+    "serviceTitleDescription": "Personaliza tu envío editándolo. Será visible para tus clientes.",
     "carrier": "Transportista",
     "carrierLogo": "Logo del transportista",
     "transitTime": "Tiempo de tránsito",
@@ -179,13 +180,27 @@
     "destination": "Destino",
     "myPrices": "Mis precios",
     "packlinkPrices": "Precios de Packlink",
-    "configureService": "Configura el servicio"
+    "configureService": "Configura el servicio",
+    "showCarrierLogo": "Mostrar logo del transportista a mis clientes.",
+    "pricePolicy": "Política de precios",
+    "pricePolicyDescription": "Por defecto <strong>serán los precios base de Packlink.</strong> Pero puedes configurarlos de manera más precisa a continuación.",
+    "configurePricePolicy": "Configurar mis precios de envío",
+    "taxClassTitle": "Elige tu tipo de impuesto guardado",
+    "tax": "Impuestos",
+    "serviceCountriesTitle": "Disponibilidad por país de destino",
+    "serviceCountriesDescription": "Selecciona la disponibilidad para los países que hay permitidos para tu servicio de envío.",
+    "openCountries": "Ver países",
+    "allCountriesSelected": "Todos los países seleccionados",
+    "oneCountrySelected": "Un país seleccionado",
+    "selectedCountries": "%s países seleccionados",
+    "firstPricePolicyDescription": "Perfecto, son un par de pasos:<br><br>1- Elige si quieres fijarlos por el peso y/o el precio de la compra.<br><br>2- Elige una política de precios y configúrala.",
+    "addFirstPolicy": "Añadir regla de precio",
+    "addAnotherPolicy": "Añadir otro precio"
   },
   "shippingServicesSettings": {
     "filterServices": "Filtrar servicios",
     "addServiceTitle": "Añadir nombre de servicio",
     "titleWillBeVisible": "Este nombre será visible para tus clientes.",
-    "showCarrierLogo": "Mostrar logo del transportista a mis clientes.",
     "selectPricingPolicy": "Seleccionar política de precios",
     "choosePricingPolicy": "Elige la política de precios para mostrar a tus clientes.",
     "packlinkPrices": "Precios de Packlink",
@@ -210,7 +225,6 @@
     "to": "Hasta",
     "price": "Precio",
     "addPrice": "Añadir precio",
-    "tax": "Impuestos",
     "gettingAvailableShippingService": "Buscando los servicios de envío disponibles en Packlink PRO. Por favor, espera un momento.",
     "shippingServiceSuccessfullySaved": "Servicio de envío guardado.",
     "congrats": "¡Enhorabuena! Ya tienes tu primer servicio de envío.",
