--- a/src/BusinessLogic/Resources/lang/fr.json
+++ b/src/BusinessLogic/Resources/lang/fr.json
@@ -166,15 +166,20 @@
     "parcelDestination": "Destination du colis",
     "pickup": "Point de retrait",
     "delivery": "Livraison à domicile",
-    "packlinkPrices": "Prix Packlink"
+    "packlinkPrices": "Prix Packlink",
+    "carrier": "Transporteur",
+    "transitTime": "Temps de transit",
+    "origin": "Origine",
+    "destination": "Destination",
+    "carrierLogo": "Logo du transporteur",
+    "showCarrierLogo": "Montrer le logo du transporteur à mes clients",
+    "tax": "Taxe"
   },
   "shippingServicesSettings": {
     "filterServices": "Filtrer les services",
     "addServiceTitle": "Ajouter un titre de service",
     "titleWillBeVisible": "Ce titre sera visible par vos clients",
     "serviceTitle": "Titre du service",
-    "carrierLogo": "Logo du transporteur",
-    "showCarrierLogo": "Montrer le logo du transporteur à mes clients",
     "selectPricingPolicy": "Sélectionner une politique de prix",
     "choosePricingPolicy": "Choisir la politique de prix à montrer à vos clients",
     "percentagePacklinkPrices": "% des prix Packlink",
@@ -187,10 +192,6 @@
     "selectedShippingServices": "Services de livraison sélectionnés",
     "select": "Sélectionner",
     "shippingServices": "Services de livraison",
-    "carrier": "Transporteur",
-    "transitTime": "Temps de transit",
-    "origin": "Origine",
-    "destination": "Destination",
     "showingPercentsResults": "Montrer %s les résultats",
     "setPricingRule": "Veuillez définir une règle de prix",
     "increase": "Augmenter",
@@ -204,7 +205,6 @@
     "to": "À",
     "price": "Prix",
     "addPrice": "Ajouter un prix",
-    "tax": "Taxe",
     "gettingAvailableShippingService": "En cours d'obtention de services de livraison de Packlink PRO. Veuillez patienter un moment. ",
     "shippingServiceSuccessfullySaved": "Service de livraison enregistré avec succès.",
     "congrats": "Félicitations! Votre premier service d'envoi a été créé avec succès.",
