--- a/src/BusinessLogic/Resources/lang/it.json
+++ b/src/BusinessLogic/Resources/lang/it.json
@@ -166,15 +166,20 @@
     "parcelDestination": "Destinazione pacco",
     "pickup": "Consegna al domicilio",
     "delivery": "Consegna in punto corriere",
-    "packlinkPrices": "Prezzi di Packlink"
+    "carrier": "Corriere",
+    "carrierLogo": "Logo del corriere",
+    "transitTime": "Tempi di transito",
+    "origin": "Origine",
+    "destination": "Destinazione",
+    "packlinkPrices": "Prezzi di Packlink",
+    "tax": "Tassa",
+    "serviceTitle": "Titolo del servizio",
+    "showCarrierLogo": "Mostra logo del corriere ai miei clienti"
   },
   "shippingServicesSettings": {
     "filterServices": "Filtra i servizi",
     "addServiceTitle": "Aggiungi il titolo del servizio",
     "titleWillBeVisible": "Questo titolo sarà visibile ai tuoi clienti",
-    "serviceTitle": "Titolo del servizio",
-    "carrierLogo": "Logo del corriere",
-    "showCarrierLogo": "Mostra logo del corriere ai miei clienti",
     "selectPricingPolicy": "Seleziona la politica dei prezzi",
     "choosePricingPolicy": "Scegli la politica dei prezzi da mostrare ai tuoi clienti",
     "percentagePacklinkPrices": "% dei prezzi di Packlink",
@@ -187,10 +192,6 @@
     "selectedShippingServices": "Servizi di spedizione selezionati",
     "select": "Seleziona",
     "shippingServices": "Servizi di spedizione",
-    "carrier": "Corriere",
-    "transitTime": "Tempi di transito",
-    "origin": "Origine",
-    "destination": "Destinazione",
     "showingPercentsResults": "Mostrando %s risultati",
     "setPricingRule": "Si prega di impostare la regola dei prezzi",
     "increase": "Aumenta",
@@ -204,7 +205,6 @@
     "to": "A",
     "price": "Prezzo",
     "addPrice": "Aggiungi prezzo",
-    "tax": "Tassa",
     "gettingAvailableShippingService": "Stiamo cercando i servizi di spedizione disponibili su Packlink PRO. Per favore aspetta un istante.",
     "shippingServiceSuccessfullySaved": "Servizio di spedizione salvato con successo.",
     "congrats": "Congratulazioni! Il tuo primo servizio di spedizione è stato creato correttamente. ",
