Add pricing policy overlay (FE)
Issue: PLCR1801-51

--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -195,7 +195,28 @@
     "selectedCountries": "%s countries selected.",
     "firstPricePolicyDescription": "Perfect, just a couple of steps:<br><br>1. Choose whether you want to set them by weight and/or purchase price.<br><br>2. Choose a price policy and set it up.",
     "addFirstPolicy": "Add price rule",
-    "addAnotherPolicy": "Add another rule"
+    "addAnotherPolicy": "Add another rule",
+    "from": "From",
+    "to": "To",
+    "price": "Price",
+    "rangeTypeExplanation": "Choose whether you want to set them by weight and/or purchase price.",
+    "rangeType": "Range type",
+    "priceRange": "Price range",
+    "weightRange": "Weight range",
+    "weightAndPriceRange": "Weight and price range",
+    "singlePricePolicy": "Price policy",
+    "pricePolicyExplanation": "Choose a price policy and set it up.",
+    "packlinkPrice": "Packlink Price",
+    "percentagePacklinkPrices": "% of Packlink prices",
+    "fixedPrices": "Fixed price",
+    "increaseExplanation": "Increase: add a % to the price, this will be paid by the customer.",
+    "reduceExplanation": "Reduce: deduct a % from the price, you will pay for it yourself.",
+    "select": "Select",
+    "save": "Save",
+    "cancel": "Cancel",
+    "invalidRange": "Invalid range",
+    "increase": "Increase",
+    "reduce": "Reduce"
   },
   "shippingServicesSettings": {
     "filterServices": "Filter services",
@@ -209,20 +230,14 @@
     "configure": "Configure",
     "allShippingServices": "All shipping services",
     "selectedShippingServices": "Selected shipping services",
-    "select": "Select",
     "shippingServices": "Shipping Services",
     "showingPercentsResults": "Showing %s results",
     "setPricingRule": "Please set pricing rule",
-    "increase": "Increase",
-    "reduce": "Reduce",
     "by": "By",
     "addPriceForWeightCriteria": "Please add price for each weight criteria",
     "addPriceForPriceCriteria": "Please add price for each price criteria",
     "fixedPricesTotalWeight": "Fixed prices based on total weight",
     "fixedPricesTotalPrice": "Fixed prices based on total price",
-    "from": "From",
-    "to": "To",
-    "price": "Price",
     "addPrice": "Add price",
     "gettingAvailableShippingService": "Getting available shipping services from Packlink PRO. Please wait a moment.",
     "shippingServiceSuccessfullySaved": "Shipping service successfully saved.",
