--- a/src/BusinessLogic/Resources/lang/es.json
+++ b/src/BusinessLogic/Resources/lang/es.json
@@ -195,7 +195,27 @@
     "selectedCountries": "%s países seleccionados",
     "firstPricePolicyDescription": "Perfecto, son un par de pasos:<br><br>1- Elige si quieres fijarlos por el peso y/o el precio de la compra.<br><br>2- Elige una política de precios y configúrala.",
     "addFirstPolicy": "Añadir regla de precio",
-    "addAnotherPolicy": "Añadir otro precio"
+    "addAnotherPolicy": "Añadir otro precio",
+    "from": "Desde",
+    "to": "Hasta",
+    "price": "Precio",
+    "rangeTypeExplanation": "Elige si quieres fijarlos por el peso y/o el precio de la compra.",
+    "rangeType": "Tipo de rango",
+    "priceRange": "Rango de precio",
+    "weightRange": "Rango de peso",
+    "weightAndPriceRange": "Rango de peso y precio",
+    "singlePricePolicy": "Política de precio",
+    "packlinkPrice": "Precio Packlink",
+    "percentagePacklinkPrices": "% de los precio de Packlink",
+    "fixedPrices": "Precio fijo",
+    "increaseExplanation": "Incrementar: añade un % al precio, lo pagará el cliente.",
+    "reduceExplanation": "Reducir: descuenta un % al precio, lo pagarás tú.",
+    "select": "Elige",
+    "save": "Guardar",
+    "cancel": "Cancelar",
+    "invalidRange": "Invalid range",
+    "increase": "Incrementar",
+    "reduce": "Reducir"
   },
   "shippingServicesSettings": {
     "filterServices": "Filtrar servicios",
@@ -210,19 +230,14 @@
     "configure": "Configurar",
     "allShippingServices": "Todos los servicios de envío",
     "selectedShippingServices": "Servicios de envío seleccionados",
-    "select": "Seleccionar",
     "shippingServices": "Servicios de envío",
     "showingPercentsResults": "Mostrando %s resultados",
     "setPricingRule": "Establece como fijar el precio",
-    "increase": "Incrementar",
-    "reduce": "Reducir",
     "by": "Por",
     "addPriceForWeightCriteria": "Añade el precio para cada peso",
     "addPriceForPriceCriteria": "Por favor, añade precio para cada criterio",
     "fixedPricesTotalWeight": "Precios fijos en función del peso total",
     "fixedPricesTotalPrice": "Precios fijos en función del precio total",
-    "from": "Desde",
-    "to": "Hasta",
     "price": "Precio",
     "addPrice": "Añadir precio",
     "gettingAvailableShippingService": "Buscando los servicios de envío disponibles en Packlink PRO. Por favor, espera un momento.",
