--- a/src/BusinessLogic/Resources/lang/fr.json
+++ b/src/BusinessLogic/Resources/lang/fr.json
@@ -173,7 +173,15 @@
     "destination": "Destination",
     "carrierLogo": "Logo du transporteur",
     "showCarrierLogo": "Montrer le logo du transporteur à mes clients",
-    "tax": "Taxe"
+    "tax": "Taxe",
+    "increase": "Augmenter",
+    "reduce": "Réduire",
+    "from": "De",
+    "to": "À",
+    "price": "Prix",
+    "select": "Sélectionner",
+    "save": "Enregistrer",
+    "cancel": "Annuler"
   },
   "shippingServicesSettings": {
     "filterServices": "Filtrer les services",
@@ -184,26 +192,18 @@
     "choosePricingPolicy": "Choisir la politique de prix à montrer à vos clients",
     "percentagePacklinkPrices": "% des prix Packlink",
     "fixedPrices": "Prix fixes",
-    "save": "Enregistrer",
-    "cancel": "Annuler",
     "packlinkPercent": "Pourcentage Packlink",
     "configure": "Configurer",
     "allShippingServices": "Tous les services de livraison",
     "selectedShippingServices": "Services de livraison sélectionnés",
-    "select": "Sélectionner",
     "shippingServices": "Services de livraison",
     "showingPercentsResults": "Montrer %s les résultats",
     "setPricingRule": "Veuillez définir une règle de prix",
-    "increase": "Augmenter",
-    "reduce": "Réduire",
     "by": "Par",
     "addPriceForWeightCriteria": "Veuillez ajouter un prix pour chaque critère de poids",
     "addPriceForPriceCriteria": "Veuillez ajouter un prix pour chaque critère de prix",
     "fixedPricesTotalWeight": "Prix fixes basés sur le poids total",
     "fixedPricesTotalPrice": "Prix fixes basés sur le prix total",
-    "from": "De",
-    "to": "À",
-    "price": "Prix",
     "addPrice": "Ajouter un prix",
     "gettingAvailableShippingService": "En cours d'obtention de services de livraison de Packlink PRO. Veuillez patienter un moment. ",
     "shippingServiceSuccessfullySaved": "Service de livraison enregistré avec succès.",
