--- a/src/BusinessLogic/Resources/lang/it.json
+++ b/src/BusinessLogic/Resources/lang/it.json
@@ -174,7 +174,15 @@
     "packlinkPrices": "Prezzi di Packlink",
     "tax": "Tassa",
     "serviceTitle": "Titolo del servizio",
-    "showCarrierLogo": "Mostra logo del corriere ai miei clienti"
+    "showCarrierLogo": "Mostra logo del corriere ai miei clienti",
+    "increase": "Aumenta",
+    "reduce": "Diminuisci",
+    "from": "Da",
+    "to": "A",
+    "price": "Prezzo",
+    "select": "Sélectionner",
+    "save": "Salva",
+    "cancel": "Annulla"
   },
   "shippingServicesSettings": {
     "filterServices": "Filtra i servizi",
@@ -184,8 +192,6 @@
     "choosePricingPolicy": "Scegli la politica dei prezzi da mostrare ai tuoi clienti",
     "percentagePacklinkPrices": "% dei prezzi di Packlink",
     "fixedPrices": "Prezzo fisso",
-    "save": "Salva",
-    "cancel": "Annulla",
     "packlinkPercent": "Percentuale di Packlink",
     "configure": "Configura",
     "allShippingServices": "Tutti i servizi di spedizione",
@@ -194,16 +200,11 @@
     "shippingServices": "Servizi di spedizione",
     "showingPercentsResults": "Mostrando %s risultati",
     "setPricingRule": "Si prega di impostare la regola dei prezzi",
-    "increase": "Aumenta",
-    "reduce": "Diminuisci",
     "by": "del",
     "addPriceForWeightCriteria": "Si prega di aggiungere il prezzo per ciascun criterio di peso",
     "addPriceForPriceCriteria": "Si prega di aggiungere il costo per ogni criterio di prezzo",
     "fixedPricesTotalWeight": "Prezzi fissi basati sul peso totale",
     "fixedPricesTotalPrice": "Prezzi fissi basati sul prezzo totale",
-    "from": "Da",
-    "to": "A",
-    "price": "Prezzo",
     "addPrice": "Aggiungi prezzo",
     "gettingAvailableShippingService": "Stiamo cercando i servizi di spedizione disponibili su Packlink PRO. Per favore aspetta un istante.",
     "shippingServiceSuccessfullySaved": "Servizio di spedizione salvato con successo.",
