--- a/src/BusinessLogic/Resources/lang/de.json
+++ b/src/BusinessLogic/Resources/lang/de.json
@@ -173,7 +173,15 @@
     "destination": "Empfänger",
     "packlinkPrices": "Packlink-Preise",
     "showCarrierLogo": "Meinen Kunden das Logo anzeigen",
-    "tax": "Steuer"
+    "tax": "Steuer",
+    "increase": "Erhöhen",
+    "reduce": "Reduzieren",
+    "from": "Von",
+    "to": "Bis",
+    "price": "Preis",
+    "select": "Auswählen",
+    "save": "Speichern",
+    "cancel": "Abbrechen"
   },
   "shippingServicesSettings": {
     "filterServices": "Versanddienste filtern",
@@ -184,26 +192,18 @@
     "choosePricingPolicy": "Wählen Sie die Preispolitik, die Sie Ihren Kunden anzeigen möchten",
     "percentagePacklinkPrices": "%-Satz der Packlink-Preise",
     "fixedPrices": "Feste Preise",
-    "save": "Speichern",
-    "cancel": "Abbrechen",
     "packlinkPercent": "Packlink-Prozentsatz",
     "configure": "Einstellen",
     "allShippingServices": "Alle Versanddienste",
     "selectedShippingServices": "Ausgewählte Versanddienste",
-    "select": "Auswählen",
     "shippingServices": "Versanddienste",
     "showingPercentsResults": "Es werden %s Ergebnisse angezeigt",
     "setPricingRule": "Bitte legen Sie eine Preisregel fest",
-    "increase": "Erhöhen",
-    "reduce": "Reduzieren",
     "by": "um",
     "addPriceForWeightCriteria": "Bitte fügen Sie für jede Gewichtskategorie einen Preis hinzu",
     "addPriceForPriceCriteria": "Bitte geben Sie den Preis für jedes Preiskriterium an",
     "fixedPricesTotalWeight": "Festpreise basierend auf dem Gesamtgewicht",
     "fixedPricesTotalPrice": "Festpreise basierend auf dem Gesamtpreis",
-    "from": "Von",
-    "to": "Bis",
-    "price": "Preis",
     "addPrice": "Preis hinzufügen",
     "gettingAvailableShippingService": "Wir suchen verfügbare Versanddienste von Packlink PRO, bitte haben Sie einen Moment Geduld.",
     "shippingServiceSuccessfullySaved": "Versanddienst erfolgreich gespeichert.",
