--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -156,6 +156,13 @@
     "cancelled": "Canceled"
   },
   "shippingServices": {
+    "myServices": "My shipping services",
+    "noServicesTitle": "You just need to add your shipment services",
+    "noServicesDescription": "They will be shown to your customer at the time of checkout, so that they can choose which carrier will deliver their parcel. Set it up now so that you don't need to worry about anything else. You can change it whenever you wish, to renew or upgrade shipping services.",
+    "addService": "Add service",
+    "addNewService": "Add new service",
+    "deletedSuccessTitle": "Shipping service deleted successfully",
+    "deletedSuccessDescription": "You can add new services from \"Add new service\".",
     "pickShippingService": "Add delivery services",
     "filterModalTitle": "Filters",
     "applyFilters": "Apply filters",
