Add pricing policy overlay (FE)
Issue:PLCR1801-51

--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -226,7 +226,9 @@
     "increase": "Increase",
     "reduce": "Reduce",
     "and": "and",
-    "by": "By"
+    "by": "By",
+    "edit": "Edit",
+    "clear": "Clear"
   },
   "shippingServicesSettings": {
     "filterServices": "Filter services",
